# syc

./: .gitignore  CMakeLists.txt  pack.sh
src/: ast.cpp  ast.hpp  common.cpp  common.hpp  ir.cpp  ir.hpp  ir_builder.cpp  ir_builder.hpp  ir_passes.cpp  ir_printer.cpp  ir_printer.dpp  lexer.cpp  lexer.hpp  main.cpp  mips.cpp  mips.hpp  mips_builder.cpp  mips_builder.hpp  mips_passes.cpp  mips_printer.cpp  parser.cpp  parser.hpp  passes.hpp  prompt.cpp  prompt.hpp  spec.cpp  symbol.cpp  symbol.hpp  util.hpp
src/mr_passes/: bb_normalize.cpp  dce.cpp  liveness.cpp  liveness.hpp  move_coalesce.cpp  reg_alloc.cpp  reg_restore.cpp  use_def.cpp  use_def.hpp
src/passes/: br_induce.cpp  cg.cpp  dbe.cpp  dce.cpp  dge.cpp  dle.cpp  gg.cpp  ir_common.cpp  ir_common.hpp  loop.cpp  mem2reg.cpp
tests/: hex.py  make-out.sh  split.c  test.py  test.sh
tests/src/: cases.py  common.h  conf.py  env.py  runner.py  test.py  util.py
